--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -9,7 +9,7 @@
     border-bottom: 1px ridge;
     min-height:400px;
 }
-
+/* This is a footer */
 .footer{
     background-color: #D1C4E9;
     margin:0px auto;
